--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
 
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./styles/style.css" />
   <script src="./scripts/modal.js"></script>
   <title>Simpleat</title>
@@ -108,10 +112,10 @@
             <p class="par">MORE THAN FOOD</p>
             <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
             <div class="foodInfo">
-              <span>Everything your body needs in one bottle of Simpleat. Drink Simpleat <br> and
+              <span>Everything your body needs in one bottle of Simpleat. Drink Simpleat and
                 forget about hunger. Be
                 the
-                first to try nutrition designed <br> for your needs.</span>
+                first to try nutrition designed for your needs.</span>
             </div>
             <p class="underPar">Free shipping for orders over €90</p>
 
@@ -186,8 +190,8 @@
               optimal health.</span>
           </div>
           <div class="secondSection">
-            <span style="color: #c4fffc; ">Simpleat will take care of your hunger while<br> you have
-              more important things to<br>
+            <span style="color: #c4fffc; ">Simpleat will take care of your hunger while you have
+              more important things to
               do whether it is your
               work, business, travel or simply having fun.</span>
           </div>
@@ -340,7 +344,7 @@
               </div>
               <div class="card-info">
                 <p>Anna, 25 • Manager</p>
-                <span>Lorem ipsum dolor sit elit,sed do eiusmod elit,sed do eiusmod ipsum </span>
+                <span>Lorem ipsum dolor sit elit,sed do eiusmod elit,sed do eiusmod ipsum</span>
               </div>
             </div>
           </div>
