--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="modal-body">
           <div class="cookies-body rounded-lg d-flex align-items-center">
             <div>
-              <img src="./img/waning.png" alt="">
+              <img src="./img/warning.png" alt="">
             </div>
             <div class="cookies-warning">
               <span>This website uses cookies. The information in the cookies is used to provide the best experience for
@@ -110,7 +110,7 @@
         <div class="bottlesForma col-lg-5">
           <div class="bottlesFormaPresentational">
             <p class="par">MORE THAN FOOD</p>
-            <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+            <img src="./img/ShapeBlack.png" alt="">
             <div class="foodInfo">
               <span>Everything your body needs in one bottle of Simpleat. Drink Simpleat and
                 forget about hunger. Be
@@ -182,7 +182,7 @@
       <div class="row justify-content-between ">
         <div class="description col-lg-4 col-md-12">
           <p>What is Simpleat?</p>
-          <img src="./img/Shape 4 copy 2 копия 3 copy.png" alt="">
+          <img src="./img/ShapeWhite.png" alt="">
           <div class="firstSection">
             <span style="color: #c4fffc;">Simpleat is made to provide the perfectly balanced diet
               with every nutrient
@@ -198,7 +198,7 @@
         </div>
         <div class="videoSection col-lg-7 col-md-12">
           <div class="video" data-toggle="modal" data-target="#whatsIsSimpleatModal">
-            <img src="./img/Forma 1 копия 3.png">
+            <img src="./img/playButton.png">
             <p>Play video</p>
           </div>
         </div>
@@ -221,7 +221,7 @@
   <section class="whySimpleat">
     <div class="whysimpleat-header">
       <p>Why Simpleat?</p>
-      <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+      <img src="./img/ShapeBlack.png" alt="">
       <div>
         <span style="color: #41474d;">Enjoy all the benefits of Simpleat</span>
       </div>
@@ -321,7 +321,7 @@
   <section class="testimonial">
     <div class="testimonial-header">
       <p>TESTIMONIAL</p>
-      <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+      <img src="./img/ShapeBlack.png" alt="">
       <div>
         <span style="color: #41474d;">Simpleat is made to provide the perfectly balanced diet with every nutrient your
           body needs for optimal health.</span>
@@ -332,7 +332,7 @@
         <div class="col-lg-3 col-md-6 col-sm-12 col-12 testimonial-col">
           <div class="testimonial-card">
             <div style="width: 100%;">
-              <img src="./img/Group 4.png" alt="">
+              <img src="./img/anna.png" alt="">
             </div>
             <div class="testimonial-card-info">
               <div class="testimonial-button">
@@ -352,7 +352,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 col-12 testimonial-col ">
           <div class="testimonial-card">
-            <img src="./img/Group 5.png" alt="">
+            <img src="./img/stiv.png" alt="">
             <div class="testimonial-card-info">
               <div class="testimonial-button">
                 <svg data-toggle="modal" data-target="#stiv" xmlns="http://www.w3.org/2000/svg"
@@ -371,7 +371,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 col-12 testimonial-col ">
           <div class="testimonial-card">
-            <img src="./img/Group 6.png" alt="">
+            <img src="./img/julia.png" alt="">
             <div class="testimonial-card-info">
               <div class="testimonial-button no-video">
                 <svg data-toggle="modal" data-target="#whatsIsSimpleatModal" xmlns="http://www.w3.org/2000/svg"
@@ -390,7 +390,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-12 col-12 testimonial-col ">
           <div class="testimonial-card">
-            <img src="./img/Group 8.png" alt="">
+            <img src="./img/john.png" alt="">
             <div class="testimonial-card-info">
               <div class="testimonial-button">
                 <svg data-toggle="modal" data-target="#john" xmlns="http://www.w3.org/2000/svg"
@@ -454,7 +454,7 @@
   <section class="mainIngredients">
     <div class="mainIngredients-header">
       <p>Main ingredients</p>
-      <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+      <img src="./img/ShapeBlack.png" alt="">
       <div>
         <span>What is inside Simpleat?</span>
       </div>
@@ -531,7 +531,7 @@
   <section class="nutritionFacts d-flex flex-column justify-content-between">
     <div class="nutritionFacts-header">
       <p>Nutritional Facts</p>
-      <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+      <img src="./img/ShapeBlack.png" alt="">
     </div>
     <div class="container">
       <div class="row">
@@ -689,7 +689,7 @@
 
     <div class="nutritionFacts-footer">
       <div class="download-pdf">
-        <a href="Nutrition-Facts.pdf" class="text-success" download>Download PDF</a>
+        <a href="./simpleat.pdf" class="text-success" download>Download PDF</a>
       </div>
       <div class="button-orderNow">
         <button class="btn btn-success">Order Now</button>
@@ -702,7 +702,7 @@
       <div class="row justify-content-center" style="margin-bottom: 20px;">
         <div class="col-lg-8 col-md-10 col-12 stats-header">
           <p class="mb-0">Low glycemic and insulin index</p>
-          <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+          <img src="./img/ShapeBlack.png" alt="">
           <div>
             <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
               Lorem Ipsum has been the
@@ -714,7 +714,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10 col-12 stats-img">
           <div>
-            <img src="./img/Vector Smart Object.png" alt="">
+            <img src="./img/statsDiagram.png" alt="">
           </div>
         </div>
       </div>
@@ -724,7 +724,7 @@
   <section class="superFood text-center d-flex flex-column justify-content-around">
     <div class="superFood-header ">
       <p class="mb-0">Simpleat — Super food</p>
-      <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+      <img src="./img/ShapeBlack.png" alt="">
       <div><span>Nutritional Profile.<br>
           Click on the Title to learm more</span></div>
     </div>
@@ -746,7 +746,7 @@
       <div class="row superFood-content rounded-lg">
         <div class="col-lg-5 d-flex justify-content-center align-items-center">
 
-          <img src="./img/Bottles_Mockup_Blue копия.png" alt="">
+          <img src="./img/transparentBottle.png" alt="">
 
           <p class="position-absolute">What's inside?</p>
         </div>
@@ -974,7 +974,7 @@
   <section class="joinUs d-flex flex-column justify-content-around align-items-center">
     <div class="joinUs-header">
       <p>Join us</p>
-      <img src="./img/Shape 4 copy 2 копия 3 copy 9.png" alt="">
+      <img src="./img/ShapeBlack.png" alt="">
       <div><span>Stay updated, enjoy special offers and bonuses</span></div>
     </div>
     <div class="joinUs-content d-flex justify-content-between">
